# ratvision

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
examples/: head_directions.json  positions.json  render_demo.py
ratvision/: README.md  __init__.py  blender_script.py  pyproject.toml  renderer.py  test.py
ratvision/environments/: box_messy.blend
tests/: test_ratvision.py
